# nixos-config

./: common.nix  configuration.nix  desktop.nix  go.nix  hardware-configuration.nix  nixos-switch  pyproject.toml  python.nix  steam.nix  thinkpad.nix
npins/: sources.json
