[tool.poetry]
name = "nixos"
version = "0.1.0"
description = ""
authors = ["kamiladcr <kamila.dzhavatova@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
folium = "^0.15.1"
geopandas = "^0.14.2"
jupyter = "^1.0.0"
matplotlib = "^3.8.2"
openpyxl = "^3.1.2"
osmnx = "^1.8.1"
pandas = "^2.1.4"
plotly = "^5.1.18"
pyjstat = "^2.4.0"
requests = "^2.31.0"
scikit-learn = "^1.3.2"
shapely = "^2.0.2"
ruff = "^0.1.11"
black = "^23.12.1"
seaborn = "^0.13.1"
nbconvert = "^7.14.2"
dash = "^2.14.2"
dash-bootstrap-components = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
