[tool.poetry]
name = "nixos"
version = "0.1.0"
description = ""
authors = ["kamiladcr <kamila.dzhavatova@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

black = "^23.12.1"
dash = "^2.14.2"
dash-bootstrap-components = "^1.5.0"
folium = "^0.15.1"
geopandas = "^0.14.2"
notebook = "^7.1.3"
matplotlib = "^3.8.2"
nbconvert = "^7.14.2"
openpyxl = "^3.1.2"
osmium = "^3.7.0"
osmnx = "^1.8.1"
pandas = "^2.1.4"
pandas-stubs = "^2.2.1.240316"
plotly = "^5.1.18"
pyarrow = "^15.0.0"
pyjstat = "^2.4.0"
pyrosm = "^0.6.2"
pysal = "^24.1"
rasterio = "^1.3.10"
rasterstats = "^0.19.0"
requests = "^2.31.0"
ruff = "^0.1.11"
scikit-learn = "^1.3.2"
seaborn = "^0.13.1"
shapely = "^2.0.2"
keplergl = "^0.3.2"
jupyter_packaging = "^0.12.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
