[project]
name = "global"
version = "0.0.1"
description = ""
authors = [{ name = "kamiladcr", email = "kamila.dzhavatova@gmail.com" }]
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
    "black>=23.12.1",
    "dash>=2.14.2",
    "dash-bootstrap-components>=1.5.0",
    "folium>=0.15.1",
    "geopandas>=0.14.2",
    "jenkspy>=0.4.1",
    "jupyter_packaging>=0.12.3",
    "matplotlib>=3.8.2",
    "nbconvert>=7.14.2",
    "notebook>=7.1.3",
    "openpyxl>=3.1.2",
    "osmium>=3.7.0",
    "osmnx>=1.8.1,<2",
    "pandas>=2.1.4",
    "pandas-stubs>=2.2.1.240316",
    "plotly>=5.1.18",
    "pyarrow>=15.0.0",
    "pydeck>=0.9.1",
    "pyjstat>=2.4.0",
    # "pysal>=24.1",
    "rasterio>=1.3.10",
    "rasterstats>=0.19.0",
    "requests>=2.31.0",
    "ruff>=0.1.11",
    "scikit-learn>=1.3.2",
    "seaborn>=0.13.1",
    "shapely>=2.0.2",
    "kaleido==0.2.1",
    "rioxarray>=0.18.2",
    "beautifulsoup4>=4.13.4",
    "lxml==5.3.2",
    "tqdm==4.67.1",
    "selenium==4.35.0",
    "webdriver-manager==4.0.2",
    "hdbscan>=0.8.40",
    "Cython<3",
    "dask==2025.9.1",
]